有状态计算时前置过滤条件为false逻辑修改